Fix for invisible slider-container overflow on mobile

--- a/src/app/shared-components/rect-item/rect-item.component.css
+++ b/src/app/shared-components/rect-item/rect-item.component.css
@@ -125,6 +125,7 @@ mat-icon {
     box-shadow: none;
     background-color: var(--element-bg);
     padding: 15px;
+    border-radius: 10px;
   }
   
   .container p {
